/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.2.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
    id("com.github.johnrengelman.shadow") version "7.1.2"
}

tasks.withType<com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar> {
    archiveClassifier.set("")
    manifest {
        attributes["Main-Class"] = "me.hash.mediaroulette.Main"
    }
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    google()

    // Add JitPack repository for custom dependencies
    maven { url = uri("https://jitpack.io") }
}

dependencies {
    implementation("net.dv8tion:JDA:5.3.0")

    implementation("org.json:json:20231013")
    implementation("org.jsoup:jsoup:1.16.1")
    implementation("io.github.cdimascio:dotenv-java:3.0.0")
    implementation("club.minnced:discord-webhooks:0.8.4")
    implementation("org.mongodb:mongodb-driver-sync:4.10.2")
    implementation("ch.qos.logback:logback-classic:1.5.6")
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(22))
    }
}

application {
    // Define the main class for the application.
    mainClass.set("me.hash.mediaroulette.Main")
}